fix subtask endpoint
