# app/backend/build/swagger.json
@@ -224,6 +224,86 @@
 							"type": "string"
 						}
 					}
+				]
+			}
+		},
+		"/subtasks/subtask": {
+			"post": {
+				"operationId": "AddSubtask",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {}
+						}
+					}
+				}
+			}
+		},
+		"/subtasks/task/all": {
+			"get": {
+				"operationId": "GetTaskSubtasks",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "taskId",
+						"required": true,
+						"schema": {
+							"type": "array",
+							"items": {
+								"type": "string"
+							}
+						}
+					}
+				]
+			}
+		},
+		"/subtasks/subtask/{subtaskId}": {
+			"patch": {
+				"operationId": "PatchSubtask",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "subtaskId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
 				],
 				"requestBody": {
 					"required": true,
@@ -233,6 +313,30 @@
 						}
 					}
 				}
+			},
+			"delete": {
+				"operationId": "DeleteTask",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "subtaskId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/projects/all": {
